--- a/Assignment2/Assignment2/Assignment2.vcxproj
+++ b/Assignment2/Assignment2/Assignment2.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -13,14 +13,16 @@
   <ItemGroup>
     <ClInclude Include="cpu.h" />
     <ClInclude Include="dns.h" />
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="functions.h" />
     <ClInclude Include="headers.h" />
     <ClInclude Include="lookup.h" />
+    <ClInclude Include="Parameters.h" />
     <ClInclude Include="winsock.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpu.cpp" />
     <ClCompile Include="dns.cpp" />
+    <ClCompile Include="functions.cpp" />
     <ClCompile Include="lookup.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -29,18 +31,19 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A9E3A6F8-DB12-49A5-BBBB-C0941DE92FB7}</ProjectGuid>
     <RootNamespace>Assignment2</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
